<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".Lec6_prac1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lec6_prac1_tv1"
        android:textSize="20sp"/>

    <SlidingDrawer
        android:content="@+id/lec6_prac1_layout1"
        android:handle="@+id/lec6_prac1_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/lec6_prac1_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lec6_prac1_btn1"/>

        <LinearLayout
            android:id="@+id/lec6_prac1_layout1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF00FF00">
            <SlidingDrawer
                android:content="@+id/lec6_prac1_layout2"
                android:handle="@+id/lec6_prac1_btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/lec6_prac1_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lec6_prac1_btn2"/>

                <LinearLayout
                    android:id="@+id/lec6_prac1_layout2"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFF00FF"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lec6_prac1_tv2"
                        android:textSize="20sp"/>

                </LinearLayout>

            </SlidingDrawer>

        </LinearLayout>

    </SlidingDrawer>

</LinearLayout>